Added CRUD acrions for trip